# multiparametric-combinatorial-samplers

./: LICENSE  README.md
binary-lambda-terms/: runner.py  specification.in
binary-lambda-terms/blt/: blt.cabal  stack.yaml
binary-lambda-terms/blt/app/: Main.hs
partitions/: partitions.py  runner.py
redexes/: runner.py  specification.in
redexes/redlt/: redlt.cabal
redexes/redlt/app/: Main.hs
redexes/redlt/src/: Sampler.hs
tilings/: large-tiling-generator.py  runner.py  show_statistics.py  smyt.py  statistics.npy  tiling.py  tuner.py  viz_tilings.py
tilings/tiling-generator/: README.md  stack.yaml  tiling-generator.cabal
tilings/tiling-generator/app/: Main.hs
tilings/width-7-126-tiles/: bb.input  bb.param  input.tile
trees/: input.deg  runner.py  smyt.py  trees.py  uniform-dist.py
trees/tree-generator/: README.md  tree-generator.cabal
trees/tree-generator/app/: Main.hs
trees/tree-generator/src/: Sampler.hs
trees/tree-visualiser/: README.md  stack.yaml  tree-visualiser.cabal
trees/tree-visualiser/app/: Main.hs
trees/tree-visualiser/src/: Trees.hs  Visualisation.hs
variable-distribution/: runner.py  specification.in
variable-distribution/lambda-visualizer/: README.md  lambda-visualiser.cabal  stack.yaml
variable-distribution/lambda-visualizer/app/: Main.hs
variable-distribution/lambda-visualizer/src/: Lambda.hs  Sampler.hs  Visualisation.hs
