name:                tree-generator
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Maciej Bendkowski
maintainer:          maciej.bendkowski@tcs.uj.edu.pl
copyright:           2017 Maciej Bendkowski
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sampler
  build-depends:       base >= 4.7 && < 5
                     , random >= 1.1
                     , mtl >= 2.2.1
                     , MonadRandom >= 0.5.1
                     , transformers >= 0.4.2
  default-language:    Haskell2010

executable tree-generator
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tree-generator
  default-language:    Haskell2010
