name:                tree-visualiser
version:             0.1.0.0
synopsis:            Simple tree visualiser.
description:         Simple tree visualiser based on GraphViz.
homepage:            https://github.com/githubuser/tree-visualiser#readme
license:             BSD3
license-file:        LICENSE
author:              Maciej Bendkowski
maintainer:          maciej.bendkowski@tcs.uj.edu.pl
copyright:           2017 Maciej Bendkowski
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Trees
                     , Visualisation
  build-depends:       base >= 4.7 && < 5
                     , megaparsec >= 0.5.6
                     , graphviz >= 2999.18
                     , text >= 1.2.2.2
                     , multiset >= 0.3.3
                     , random >= 1.1
                     , containers >= 0.5.6.2
  default-language:    Haskell2010

executable tree-visualiser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tree-visualiser
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tree-visualiser
