name:                lambda-visualiser
version:             0.1.0.0
synopsis:            Simple lambda tree sampler and visualiser.
description:         Simple lambda tree sampler and visualiser based on Graphviz.
license:             BSD3
license-file:        LICENSE
author:              Maciej Bendkowski
maintainer:          maciej.bendkowski@tcs.uj.edu.pl
copyright:           2017 Maciej Bendkowski
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lambda
                     , Sampler
                     , Visualisation
  build-depends:       base >= 4.7 && < 5
                     , graphviz >= 2999.18
                     , text >= 1.2.2.2
                     , multiset >= 0.3.3
                     , random >= 1.1
                     , containers >= 0.5.6.2
                     , mtl >= 2.2.1
                     , transformers >= 0.4.2
                     , MonadRandom >= 0.5.1
  default-language:    Haskell2010

executable lambda-term-visualiser
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , lambda-visualiser
  default-language:    Haskell2010
